--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
+    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link href='http://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
+    
     <!-- CSS links come in here -->
     <link  rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link  rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div class="container-fluid">
+       <div class="col-md-3"></div>
+       <div class="col-md-6">
         <h3>front-end web developer</h3>
         <h1>matt weglicki</h1>
         <div id="navmenu">
@@ -29,6 +35,8 @@
                 <li><a href="#"><i class="fa fa-lg fa-github"></i></a></li>
             </ul>
         </div>
+        </div>
+       <div class="col-md-3"></div>
     </div>
 
     <!-- Load the JS here -->
