--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container-fluid">
        <div class="col-md-3"></div>
-       <div class="col-md-6">
+       <div class="col-md-6 text-center">
         <h3>front-end web developer</h3>
         <h1>matt weglicki</h1>
         <div id="navmenu">
