Adjusted Nav Menu

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <h3>front-end web developer</h3>
         <div id="navmenu">
             <ul>
-                <li id="navbutton"><a href="#">about</a></li>
-                <li> | </li>
-                <li><a href="#">work</a></li>
+                <li><a href="#">> about</a></li>
+                <li><a href="#">> work</a></li>
+                <li><a href="#">> code bits</a></li>
             </ul>
         </div>
         
