--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <h3>front-end web developer</h3>
         <div id="navmenu">
             <ul>
-                <li><a href="#">> about</a></li>
+                <li id="about-btn"><a href="#">> about</a></li>
+                <p id="about-panel">Hi, this is my github page, primarily a platform for learning and a basic host for various little projects I've                         worked on.</p>
                 <li><a href="#">> work</a></li>
                 <li><a href="#">> code bits</a></li>
             </ul>
@@ -46,6 +47,7 @@
     <!-- Load the JS here -->
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="js/foundation.min.js"></script>
+    <script src="js/app.js"></script>
     
 </body>
 </html>
