Adjusted mobile support
Added media queries to adapt to mobile screens.

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <link  rel="stylesheet" href="css/app.css">
 </head>
 <body>
-<div>
+<div class="container">
     <div class="large-3 columns" id="header">
         <h1>matt weglicki</h1>
         <h3>front-end web developer</h3>
         <div id="navmenu">
             <ul>
                 <li id="about-btn"><a href="#">> about</a></li>
-                <p id="about-panel">Hi, this is my github page, primarily a platform for learning and a basic host for various little projects I've                         worked on.</p>
+                <p id="about-panel">Hi! Welcome to my github page! It's primarily a platform for learning and a basic host for various little projects                         I've worked on.</p>
                 <li><a href="#">> work</a></li>
                 <li><a href="#">> code bits</a></li>
             </ul>
@@ -39,8 +39,18 @@
         </div>
  
     </div>
-    <div class="large-9 columns" id="blog-content">
+    <div class="large-9 columns" id="content">
+        <h2>Code Bits</h2>
         
+        <ul class="large-block-grid-5">
+            <li><img src="http://placehold.it/130x90"></li>
+            <li><img src="http://placehold.it/130x90"></li>
+            <li><img src="http://placehold.it/130x90"></li>
+            <li><img src="http://placehold.it/130x90"></li>
+            <li><img src="http://placehold.it/130x90"></li>
+            <li><img src="http://placehold.it/130x90"></li>
+            <li><img src="http://placehold.it/130x90"></li>
+        </ul>
     </div>
 </div>
 
