--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         
         <div class="social">
             <ul>
-                <li><a href=""><i class="fa fa-lg fa-twitter"></i></a></li>
+                <li><a href="https://twitter.com/msweglicki"><i class="fa fa-lg fa-twitter"></i></a></li>
                 <li><a href="https://www.facebook.com/mweglicki"><i class="fa fa-lg fa-facebook"></i></a></li>
 				<li><a href="#"><i class="fa fa-lg fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fa fa-lg fa-github"></i></a></li>
+                <li><a href="https://github.com/emruggs"><i class="fa fa-lg fa-github"></i></a></li>
             </ul>
         </div>
  
